--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "scrollmagic": "^2.0.7",
+    "videojs-resolution-switcher": "^0.4.2",
+    "videojs-youtube": "^2.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
