--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "save-dev": "0.0.1-security",
     "scrollmagic": "^2.0.7",
+    "video.js": "^7.6.6",
     "videojs-resolution-switcher": "^0.4.2",
     "videojs-youtube": "^2.6.0"
   },
